Fix spacing overlap of the instruction menu

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    max-height: 60vh;
+    max-height: 45vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
