--- a/src/components/instruction/Instruction.css
+++ b/src/components/instruction/Instruction.css
@@ -1,3 +1,7 @@
+.instruction-container {
+    top: 140px;
+}
+
 .instruction-menu {
     display: none;
     transition: 0.3s ease;
@@ -11,32 +15,25 @@
     @apply text-slate-50 flex items-center justify-start py-1;
 }
 
-
-@media (min-height: 568px) {
+@media (min-height: 400px) {
     .instruction-container {
-        top: 260px;
+        top: 180px;
     }
 }
 
-@media (min-height: 639px) {
+@media (min-height: 500px) {
     .instruction-container {
-        top: 300px;
+        top: 240px;
     }
 }
 
-@media (min-height: 815px) and (max-height: 999px) {
+@media (min-height: 830px) {
+    .instruction-container {
+        top: 290px;
+    }
+}
+@media (min-height: 1024px) {
     .instruction-container {
         top: 380px;
-    }
-}
-
-@media (min-height: 1000px) {
-    .instruction-container {
-        top: 400px;
-    }
-}
-@media (min-height: 1150px) {
-    .instruction-container {
-        top: 460px;
     }
 }
