--- a/src/components/searchBar/SearchBar.css
+++ b/src/components/searchBar/SearchBar.css
@@ -1,3 +1,25 @@
+/* Adjust when instruction menu is open */
+.search-menuOpen {
+    margin-top: 230px;
+}
+
+/* Adjust when instruction menu is closed  */
+.search-menuClosed {
+    margin-top: 80px;
+}
+
 .search-bar {
     max-width: 500px;
+}
+
+@media (min-height: 830px) {
+    .search-menuOpen {
+        margin-top: 180px;
+    }
+}
+
+@media (min-height: 1280px) {
+    .search-menuOpen {
+        margin-top: 130px;
+    }
 }
